# tauri-watch-engine

./: .gitignore
frontend/: index.html
frontend/css/: style.css
frontend/js/: engine.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
