[package]
name = "rust_tauri_watch_desktop_engine"
version = "0.1.0"
description = "Ironclad Watch Widget"
authors = ["Ale"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-size", "window-center", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
